== 3030-12-31 Getting Started
<p>If you're new to Constellation, read the <a href="" helpId="au.gov.asd.tac.constellation.functionality.gettingstarted">getting started guide</a>.</p>

== 2022-11-23 Quality Control Rules
<p>Quality Control Rules can now be disabled and enabled from the Category Priority menu in the Quality Control View.</p>
<p>Disabled rules will be ignored when determining the quality rating of a node.</p>

== 2022-11-21 Datetime Formatters
<p>Datetime formatters have been updated in the File and Database importers to allow single digit days and hours to be passed through most default formats.</p>
<p>A few new formatters, which don't contain seconds, have been added to the default list.</p>

== 2022-11-01 File & Database Importers
<p>Fixed a bug with the new attributes fading behind Constellation. They are now modal dialogs.</p>

== 2022-10-21 Constellation Options Menu
<p>The Constellation Options menu has now been grouped together and is ordered alphabetically.</p>
<p>To reduce the overall number of options tabs the Application Font options can now be found under the Application tab, and the Anaglyphic Displays options can be found under the Graph tab.</p>
<p>These options can be found through Setup -&gt; Options -&gt; CONSTELLATION -&gt; Application or Graph.</p>

== 2022-10-19 Export from Analytic View
<p>The ability to export the results from running an analytic in the Analytic View has been added.</p>
<p>After running an analytic, an Export button appears at the top of the results table, allowing for the results to be exported to either a CSV or Excel file.</p>

== 2022-08-03 Layers View
<p>Layers View has had a complete UI rework and is now available under the Views menu.</p>
<p>Layers View allows you to add vertices and transactions to up to 32 layers by either using the right click context menu or defining a query.</p>
<p>The view allows for toggling of layers via a checkbox which links to subsets of graph elements.